# cardanosharp-wallet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CardanoSharp.Wallet.sln  LICENCE.md  README.md  appveyor.yml  keys.txt
.github/workflows/: nuget.yml
CardanoSharp.Wallet/: AddressService.cs  CardanoSharp.Wallet.csproj  KeyService.cs  MnemonicService.cs  TransactionBuilder.cs  TransactionSerializer.cs  WalletService.cs
CardanoSharp.Wallet.Test/: AddressTests.cs  AssetLabelTests.cs  Bech32Tests.cs  CardanoSharp.Wallet.Test.csproj  KeyPairTests.cs  KeyTests.cs  MiscTests.cs  NativeScriptTests.cs  ScriptTests.cs  TransactionOutputTests.cs  TransactionTests.cs  UPLCTests.cs  WordListTests.cs
CardanoSharp.Wallet.Test/CIPs/: CIP14Tests.cs  CIP1854Tests.cs  CIP2Tests.cs  CIP30Tests.cs  CIP8Tests.cs
CardanoSharp.Wallet.Test/Extensions/: ByteArrayExtensionTests.cs
CardanoSharp.Wallet.Test/HDWallet/: DerivationTests.cs  FluentDerivationPrivateKey.cs  PathTests.cs
CardanoSharp.Wallet.Test/PlutusTests/: PlutusAddressTests.cs  PlutusAppExampleTests.cs  PlutusDataTests.cs
CardanoSharp.Wallet.Test/dat/: Vectors.md  protocol.json
CardanoSharp.Wallet/Common/: BigEndianBuffer.cs  FeeStructure.cs  HashHelper.cs  NetworkInfo.cs  SlotNetworkConfig.cs
CardanoSharp.Wallet/Encoding/: Bech32.cs  Bech32Decoder.cs  Bech32Encoder.cs
CardanoSharp.Wallet/Enums/: AddressType.cs  CoinType.cs  (+11 more)
CardanoSharp.Wallet/UPLC/: .gitignore  Cargo.toml  Readme.md  build.rs
CardanoSharp.Wallet/UPLC/dotnet/: UPLCMethods.cs  UPLCNativeMethods.g.cs
CardanoSharp.Wallet/UPLC/src/: lib.rs
(+279 files in other folders)
